frontend/src/components/Footer/footertitle.css
.footer-title {
    position: absolute;
    bottom: 0px;
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    text-align: center;
    z-index: 2;
    overflow: hidden;
}

.footer-title h1 {
    position: relative;
    line-height: 0.8;
    color: #F7F4EF;
}

.ftChar {
    display: inline-block;
    overflow: hidden;
    position: relative;
}

.ftChar>span {
    display: inline-block;
    will-change: transform;
}

/* Specific styling for the ® symbol */
.footer-title h1 sub.ftChar {
    /* font-size: 0.5em; */
    /* Make ® smaller */
    vertical-align: super;
    bottom: 0;
}

